--- a/templates/personal/index.html
+++ b/templates/personal/index.html
@@ -8,17 +8,19 @@
     {% if username %}
         <h1>用户名: {{username}}</h1>
         <h1>邮箱: {{email}}</h1>
-        <img src="/media/{{img}}/">
+        <p>头像(单击即可修改头像):</p><img src="/media/{{img}}/" onclick="upload()">
         <!--div class="photo" style="background-image: url('{{ img }}')"-->
-        <form action="" method="post" enctype="multipart/form-data">
-            <input type="file" name="img">
-            <button type="submit">上传</button>
-        </form>
+        <form action="" method="post" enctype="multipart/form-data" style="display:none">
+            <input type="file" id="uploadimg" name="img" onchange="submitimg()">
+            <button type="submit" id="submit">上传</button>
+        </form><br>
         <a href="/personal/logout/">退出登陆</a>
     {% else %}
         <h1>未登陆哦</h1>
         <a href="'/personal/login/">这就去登陆</a>
         <a href="'/personal/regist/">这就去注册</a>
     {% endif %}
+
+<script type="text/javascript" src="/static/js/upload.js/"></script>
 </body>
 </html>
