--- a/templates/index1.html
+++ b/templates/index1.html
@@ -3,22 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>index1</title>
-    <script>
-        function func1(){
-             var xhr = new XMLHttpRequest();
-             xhr.open('post', '/shit/');
-             xhr.send();
-             xhr.onreadystatechange = function(){
-                if(xhr.readyState == 4){
-                    if (xhr.status == 200 || xhr.status == 304){
-                        ret = JSON.parse(xhr.responseText);
-                        document.getElementById('d1').innerHTML = ret.username;
-                        document.getElementById('d2').innerHTML = ret.email;
-                    }
-                }
-             }
-        }
-    </script>
+    <script type="text/javascript" src="/static/js/index1_ajax.js/"></script>
 </head>
 <body>
 <div>
@@ -29,7 +14,7 @@
     <input type="checkbox">选项2
 </div>
 <div>
-    <form action="" method="post">
+    <form action="" method="post" id="form1">
         <input type="text" name="askname">
         <!--input type="submit"-->
         <button type='button' onclick="func1()">点我提交</button>
