--- a/templates/personal/index.html
+++ b/templates/personal/index.html
@@ -18,8 +18,8 @@
         <a href="/personal/logout/">退出登陆</a>
     {% else %}
         <h1>未登陆哦</h1>
-        <a href="'/personal/login/">这就去登陆</a>
-        <a href="'/personal/regist/">这就去注册</a>
+        <a href="/personal/login/">这就去登陆</a>
+        <a href="/personal/regist/">这就去注册</a>
     {% endif %}
 
 <script type="text/javascript" src="/static/js/upload.js/"></script>
