--- a/templates/personal/regist.html
+++ b/templates/personal/regist.html
@@ -12,5 +12,6 @@
         <p>邮箱(用于找回密码): <input type="email" name="email" required maxlength="20" placeholder="同样不超过20位"></p>
         <input type="submit" value="注册"> <input type="reset">
     </form>
+    <p><a href="/personal/login/">想起了账号 这就去登陆</a></p>
 </body>
 </html>
