--- a/templates/personal/registed.html
+++ b/templates/personal/registed.html
@@ -2,13 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>注册成功</title>
+    <title>注册结果</title>
+    {% if result == 'ok' %}<meta http-equiv="refresh" content="3;URL=/personal/index/">{% endif %}
 </head>
 <body>
     {% if result == 'ok' %}
         <h1>注册成功啦</h1>
+        <p>3秒后前往首页</p>
     {% else %}
         <h1>用户名重复 麻烦回去重新注册=。=</h1>
+        <a href="/personal/regist/"><p>>返回登陆</p></a>
     {% endif %}
 </body>
 </html>
