--- a/templates/index1.html
+++ b/templates/index1.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div>
-    <input type="text" value="123">
+    <input type="text" value="1223">
     <input type="password" value="1234">
     <input type="radio">男
     <input type="checkbox">选项1
@@ -20,15 +20,12 @@
         <button type='button' onclick="func1()">点我提交</button>
     </form>
 </div>
-{% if asked == 'yes' %}
-    {% if username %}
-        <p>用户名: {{username}}</p>
-        <p>邮箱:{{email}}</p>
-    {% else %}
-        <p>查无此人</p>
-    {% endif %}
-{% endif %}
-<p id="d1"><br><br>hehe {{username}}</p>
-<p id="d2">hehe2 {{email}}</p>
+
+<div>
+    <br>
+    <p id="d1">我是用户名 {{username}}</p>
+    <p id="d2">我是邮箱 {{email}}</p>
+</div>
+
 </body>
 </html>
