rename app personal as account

--- a/templates/account/index.html
+++ b/templates/account/index.html
@@ -16,11 +16,11 @@
             <button type="submit" id="submit">上传</button>
         </form><br>
     <p style="font-size:15px;color:grey">上次登录时间: {{atime}}</p>
-        <a href="/personal/logout/">退出登陆</a>
+        <a href="/account/logout/">退出登陆</a>
     {% else %}
         <h1>未登陆哦</h1>
-        <a href="/personal/login/">这就去登陆</a>
-        <a href="/personal/regist/">这就去注册</a>
+        <a href="/account/login/">这就去登陆</a>
+        <a href="/account/regist/">这就去注册</a>
     {% endif %}
     <p>目前共有 {{counts}} 位注册用户</p>
 
