--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -6,12 +6,12 @@
     <link rel="stylesheet" type="text/css" href="/static/css/login.css">
 </head>
 <body>
-    <form action ='/personal/logined/' method="post">
+    <form action ='/account/logined/' method="post">
         <p>用户名: <input type="text" name="username" autocomplete="off" placeholder="不超过12位"
                        autofocus="autofocus" required maxlength="12"></p>
         <p>密码: <input type="password" name="password" required maxlength="12" placeholder="同样不超过12位"></p>
         <input type="submit" value="登录"> <input type="reset">
     </form>
-    <a type="submit" href="/personal/regist/"><p class='regist'>点我注册</p></a>
+    <a type="submit" href="/account/regist/"><p class='regist'>点我注册</p></a>
 </body>
 </html>
