--- a/templates/account/logined.html
+++ b/templates/account/logined.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>登录结果</title>
-    {% if result == 'ok' %}<meta http-equiv="refresh" content="3;URL=/personal/index/">{% endif %}
+    {% if result == 'ok' %}<meta http-equiv="refresh" content="3;URL=/account/index/">{% endif %}
 </head>
 <body>
     {% if result == 'ok' %}
@@ -12,10 +12,10 @@
         <p>3秒后前往首页</p>
     {% elif result == 'username failed' %}
         <h1>用户名错误</h1>
-        <a href="/personal/login/">返回登陆</a>
+        <a href="/account/login/">返回登陆</a>
     {% else %}
         <h1>密码错误</h1>
-        <a href="/personal/login/">返回登陆</a>
+        <a href="/account/login/">返回登陆</a>
     {% endif %}
 </body>
 </html>
