--- a/templates/ajax_test.html
+++ b/templates/ajax_test.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>index1</title>
-    <script type="text/javascript" src="/static/js/index1_ajax.js/"></script>
+    <script type="text/javascript" src="/static/js/ajax_test.js/"></script>
 </head>
 <body>
 <div>
