--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -12,6 +12,7 @@
         <p>密码: <input type="password" name="password" required maxlength="12" placeholder="同样不超过12位"></p>
         <input type="submit" value="登录"> <input type="reset">
     </form>
-    <a type="submit" href="/account/regist/"><p class='regist'>点我注册</p></a>
+    <a href="/account/regist/"><p class='regist'>点我注册</p></a>
+    <a href="/account/resetpassword/"><p class='regist'>忘记了密码</p></a>
 </body>
 </html>
