--- a/templates/account/logined.html
+++ b/templates/account/logined.html
@@ -10,6 +10,7 @@
         <h1>登录成功</h1>
         <p>用户名: {{username}}</p>
         <p>3秒后前往首页</p>
+        <p><a href="/index/">点我立刻前往首页</a></p>
     {% elif result == 'username failed' %}
         <h1>用户名错误</h1>
         <a href="/account/login/">返回登陆</a>
