--- a/templates/account/regist.html
+++ b/templates/account/regist.html
@@ -18,7 +18,8 @@
         <p><label for="repassword">重复密码: <input type="password" name='repassword' id="repassword" minlength="6"
                                                 required maxlength="20" placeholder="6-20位" onblur="check()"></label></p>
         <p><label for="email">邮箱(用于找回密码): <input type="email" name='email' id="email" required maxlength="30"
-                                                 placeholder="30位以内"></label></p>
+                                                 placeholder="30位以内" onblur="emailcheck()"></label>
+            <span id="emailcheckinfo" >请输入邮箱</span></p>
         <input type="submit" name='submit' id='submit' value="注册" onclick="check()"> <input type="reset">
     </form>
     <p><a href="/account/login/">想起了账号 这就去登陆</a></p>
