--- a/templates/account/resetpassword.html
+++ b/templates/account/resetpassword.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>重置密码</title>
+    <title>重置密码申请</title>
     <link rel="stylesheet" type="text/css" href="/static/css/login.css">
 </head>
 <body>
