--- a/templates/account/resetpassword.html
+++ b/templates/account/resetpassword.html
@@ -8,7 +8,7 @@
 <body>
     <form action ='/account/sendresetmail/' method="post">
         <p>我记得用户名: <input type="text" name="username" autocomplete="off" placeholder="不超过12位"
-                       autofocus="autofocus" required maxlength="12"></p>
+                       autofocus="autofocus" maxlength="12"></p>
         <p>我记得邮箱: <input type="text" name="email" autocomplete="off" placeholder="不超过30位"></p>
 
         <input type="submit" value="发送找回链接"> <input type="reset">
