--- a/templates/account/index.html
+++ b/templates/account/index.html
@@ -29,14 +29,14 @@
     <div>
         <br>
         <p>一些个人代码帖子</p>
-        <a href="https://github.com/ietar"><b>github站点 可开源的小物件有空会都扔上去</b></a><br><br>
-        <a href="https://fishc.com.cn/thread-143822-1-1.html">减少欧非的抽红包</a><br>
-        <a href="https://fishc.com.cn/thread-143394-1-1.html">模拟明日方舟抽卡v2.2</a><br>
-        <a href="https://fishc.com.cn/thread-141601-1-1.html">发送文本邮件</a><br>
-        <a href="https://fishc.com.cn/thread-141064-1-1.html"><span style="color:yellowgreen">复习一下妹子图（啊不对）爬虫</span></a><br>
-        <a href="https://fishc.com.cn/thread-134327-1-1.html">最大质因数算法优化</a><br>
-        <a href="https://fishc.com.cn/thread-134199-1-1.html">豆瓣电影top250爬虫</a><br>
-        <a href="https://fishc.com.cn/thread-133755-1-1.html">打飞机是男人的浪漫! v2.0已更新</a><br><br><br>
+        <a target="_blank" href="https://github.com/ietar"><b>github站点 可开源的小物件有空会都扔上去</b></a><br><br>
+        <a target="_blank" href="https://fishc.com.cn/thread-143822-1-1.html">减少欧非的抽红包</a><br>
+        <a target="_blank" href="https://fishc.com.cn/thread-143394-1-1.html">模拟明日方舟抽卡v2.2</a><br>
+        <a target="_blank" href="https://fishc.com.cn/thread-141601-1-1.html">发送文本邮件</a><br>
+        <a target="_blank" href="https://fishc.com.cn/thread-141064-1-1.html"><span style="color:yellowgreen">复习一下妹子图（啊不对）爬虫</span></a><br>
+        <a target="_blank" href="https://fishc.com.cn/thread-134327-1-1.html">最大质因数算法优化</a><br>
+        <a target="_blank" href="https://fishc.com.cn/thread-134199-1-1.html">豆瓣电影top250爬虫</a><br>
+        <a target="_blank" href="https://fishc.com.cn/thread-133755-1-1.html">打飞机是男人的浪漫! v2.0已更新</a><br><br><br>
     </div>
     <form name="drawcards" id="drawcards" method="post" action="/drawcards/">
         <!--<button type="button" onclick="f1()">试试手气</button>-->
