drawcards fixed drawcards.html index.html optimized

--- a/templates/account/index.html
+++ b/templates/account/index.html
@@ -47,7 +47,7 @@
             {{i.name}}
         {% endfor %}
     </form>
-    <iframe id="iframe1" src="" width="0" height ="0" >您的浏览器不支持呀</iframe>
+    <iframe id="iframe1" src="" width="0" height ="0" frameborder="0" >您的浏览器不支持呀</iframe>
     <p>目前共有 {{counts}} 位注册用户</p>
 
 <script type="text/javascript" src="/static/js/upload.js/"></script>
