--- a/templates/account/index.html
+++ b/templates/account/index.html
@@ -3,22 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <title>首页</title>
+    <link rel="stylesheet" href="/static/css/index.css">
+    <script type="text/javascript" src="/static/js/jquery-3.4.1.min.js"></script>
     <script type="text/javascript" src="/static/js/index.js/"></script>
 </head>
 <body>
+<div class="header clearfix">
+    <div class="container">
+        <div id="navigation0">一些个人代码帖子
+            <div class="works">
+                <a target="_blank" href="https://github.com/ietar"><b>github</b></a>
+                <a target="_blank" href="https://fishc.com.cn/thread-143822-1-1.html">减少欧非的抽红包</a>
+                <a target="_blank" href="https://fishc.com.cn/thread-143394-1-1.html">模拟明日方舟抽卡</a>
+                <a target="_blank" href="https://fishc.com.cn/thread-141601-1-1.html">发送文本邮件</a>
+                <a target="_blank" href="https://fishc.com.cn/thread-141064-1-1.html">复习一下妹子图</a>
+                <a target="_blank" href="https://fishc.com.cn/thread-134327-1-1.html">最大质因数算法优化</a>
+                <a target="_blank" href="https://fishc.com.cn/thread-134199-1-1.html">豆瓣电影top250爬虫</a>
+                <a target="_blank" href="https://fishc.com.cn/thread-133755-1-1.html">打飞机是男人的浪漫!</a>
+            </div>
+        </div>
+        <div id="navigation1">1</div>
+        <div id="navigation2">2</div>
+        <div id="navigation3">3</div>
+        <div id="navigation4">4</div>
+        <div id="navigation5">5</div>
+    </div>
+</div>
     {% if username %}
-        <h1>用户名: {{username}}</h1>
-        <h1>邮箱: {{email}}</h1>
-        <p>头像(单击即可修改头像):</p><img src="/media/{{img}}/" onclick="upload()">
-        <!--div class="photo" style="background-image: url('{{ img }}')"-->
-        <form action="" method="post" enctype="multipart/form-data" style="display:none">
-            <input type="file" id="uploadimg" name="img" onchange="submitimg()" accept="image/*"><!--style="opacity:0"-->
-            <!--label for="uploadimg" class='btn btn-success'>Choose a file</label-->
-            <button type="submit" id="submit">上传</button>
-        </form><br>
-        <p style="font-size:15px;color:grey">上次登录时间: {{atime}}</p>
-        <a href="/account/logout/">退出登陆</a><br><br>
-
+        <div class="userinfo clearfix">
+            <h2>用户名: {{username}}</h2>
+            <h2>邮箱: {{email}}</h2>
+            <h2>头像(单击即可修改头像):</h2>
+            <img src="/media/{{img}}/" onclick="upload()">
+            <!--div class="photo" style="background-image: url('{{ img }}')"-->
+            <form action="" method="post" enctype="multipart/form-data" style="display:none">
+                <input type="file" id="uploadimg" name="img" onchange="submitimg()" accept="image/*"><!--style="opacity:0"-->
+                <!--label for="uploadimg" class='btn btn-success'>Choose a file</label-->
+                <button type="submit" id="submit">上传</button>
+            </form><br>
+            <h3>上次登录时间: {{atime}}</h3>
+            <h3><a href="/account/logout/">退出登陆</a></h3>
+        </div>
 
 
     {% else %}
@@ -26,29 +51,20 @@
         <a href="/account/login/">这就去登陆</a>
         <a href="/account/regist/">这就去注册</a>
     {% endif %}
-    <div>
-        <br>
-        <p>一些个人代码帖子</p>
-        <a target="_blank" href="https://github.com/ietar"><b>github站点 可开源的小物件有空会都扔上去</b></a><br><br>
-        <a target="_blank" href="https://fishc.com.cn/thread-143822-1-1.html">减少欧非的抽红包</a><br>
-        <a target="_blank" href="https://fishc.com.cn/thread-143394-1-1.html">模拟明日方舟抽卡v2.2</a><br>
-        <a target="_blank" href="https://fishc.com.cn/thread-141601-1-1.html">发送文本邮件</a><br>
-        <a target="_blank" href="https://fishc.com.cn/thread-141064-1-1.html"><span style="color:yellowgreen">复习一下妹子图（啊不对）爬虫</span></a><br>
-        <a target="_blank" href="https://fishc.com.cn/thread-134327-1-1.html">最大质因数算法优化</a><br>
-        <a target="_blank" href="https://fishc.com.cn/thread-134199-1-1.html">豆瓣电影top250爬虫</a><br>
-        <a target="_blank" href="https://fishc.com.cn/thread-133755-1-1.html">打飞机是男人的浪漫! v2.0已更新</a><br><br><br>
+
+    <div class="sweets">
+        <form name="drawcards" id="drawcards" method="post" action="/drawcards/">
+            <!--<button type="button" onclick="f1()">试试手气</button>-->
+            <button type="button" onclick="f2()">试试手气</button>
+            <button type="button" onclick="f3()">一会再试</button>
+            <span id="draw_result"></span>
+            {% for i in ret %}
+                {{i.name}}
+            {% endfor %}
+        </form>
+        <iframe id="iframe1" src="" width="0" height ="0" frameborder="0" >您的浏览器不支持呀</iframe>
+        <p>目前共有 {{counts}} 位注册用户</p>
     </div>
-    <form name="drawcards" id="drawcards" method="post" action="/drawcards/">
-        <!--<button type="button" onclick="f1()">试试手气</button>-->
-        <button type="button" onclick="f2()">试试手气</button>
-        <button type="button" onclick="f3()">一会再试</button>
-        <span id="draw_result"></span>
-        {% for i in ret %}
-            {{i.name}}
-        {% endfor %}
-    </form>
-    <iframe id="iframe1" src="" width="0" height ="0" frameborder="0" >您的浏览器不支持呀</iframe>
-    <p>目前共有 {{counts}} 位注册用户</p>
 
 <script type="text/javascript" src="/static/js/upload.js/"></script>
 </body>
