--- a/templates/account/index.html
+++ b/templates/account/index.html
@@ -22,11 +22,31 @@
                 <a target="_blank" href="https://fishc.com.cn/thread-133755-1-1.html">打飞机是男人的浪漫!</a>
             </div>
         </div>
-        <div id="navigation1">1</div>
-        <div id="navigation2">2</div>
-        <div id="navigation3">3</div>
-        <div id="navigation4">4</div>
-        <div id="navigation5">5</div>
+        <div id="navigation1">1
+            <div>
+                <span>1</span><span>2</span><span>3</span><span>4</span>
+            </div>
+        </div>
+        <div id="navigation2">2
+            <div>
+                <span>1</span><span>2</span><span>3</span><span>4</span>
+            </div>
+        </div>
+        <div id="navigation3">3
+            <div>
+                <span>1</span><span>2</span><span>3</span><span>4</span>
+            </div>
+        </div>
+        <div id="navigation4">4
+            <div>
+                <span>1</span><span>2</span><span>3</span><span>4</span>
+            </div>
+        </div>
+        <div id="navigation5">5
+            <div>
+                <span>1</span><span>2</span><span>3</span><span>4</span>
+            </div>
+        </div>
     </div>
 </div>
     {% if username %}
