--- a/static/css/index.css
+++ b/static/css/index.css
@@ -44,6 +44,7 @@ div.userinfo{
     width: 30rem;
     height: 18rem;
     border:1px dashed;
+    z-index:2;
 }
 div.userinfo>img{
     border:1px dotted orangered;
@@ -61,9 +62,7 @@ div.container>div>div{
     width: 8rem;
     display:none;
     overflow: hidden;
-}
-div.container>div>div{
-    display: none;
+    z-index:10;
 }
 div.container>div>div>*{
     text-decoration: none;
@@ -77,4 +76,12 @@ div.container>div>div>*{
 div.sweets{
     position: relative;
     top:4rem;
+}
+div.bei_an{
+    position:absolute;
+    width: 20rem;
+    bottom: 0;
+    left: 50%;
+    margin-left: -10rem;
+    text-align: center;
 }
