加入登录ip现实 优化注册逻辑

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -42,7 +42,8 @@ div.userinfo{
     padding: 0.3rem;
     text-align: center;
     width: 30rem;
-    height: 18rem;
+    /*height: 18rem;*/
+    height: auto;
     border:1px dashed;
     z-index:2;
 }
