--- a/templates/account/index.html
+++ b/templates/account/index.html
@@ -62,6 +62,7 @@
                 <button type="submit" id="submit">上传</button>
             </form><br>
             <h3>上次登录时间: {{atime}}</h3>
+            <h3>上次登录ip: {{ip}}</h3>
             <h3><a href="/account/logout/">退出登陆</a></h3>
         </div>
 
