调整首页样式 header右侧用户栏

--- a/templates/account/index.html
+++ b/templates/account/index.html
@@ -47,6 +47,20 @@
                 <span>1</span><span>2</span><span>3</span><span>4</span>
             </div>
         </div>
+
+        {% if username %}
+            <div style="display:inline-flex;position:absolute;right:0;align-items:center;justify-content: center">
+                <img style="display:inline" alt="头像" src="/media/{{img}}/" onclick="upload()" height=30px>
+                <span style="display:inline;margin:0 0.5rem">{{username}}</span>
+                <span style="display:inline"><a href="/account/logout/">退出</a></span>
+            </div>
+
+
+        {% else %}
+            <div style="display:inline-block;position:absolute;right:0;">
+                <span style="display:inline">未登陆</span> <a style="display:inline" href="/account/login/">登陆</a> <a style="display:inline" href="/account/regist/">注册</a>
+            </div>
+        {% endif %}
     </div>
 </div>
     {% if username %}
@@ -68,9 +82,11 @@
 
 
     {% else %}
-        <h1>未登陆哦</h1>
-        <a href="/account/login/">这就去登陆</a>
-        <a href="/account/regist/">这就去注册</a>
+        <div class="userinfo clearfix">
+            <h1>未登陆</h1>
+            <a href="/account/login/">这就去登陆</a>
+            <a href="/account/regist/">这就去注册</a>
+        </div>
     {% endif %}
 
     <div class="sweets">
