--- a/static/css/index.css
+++ b/static/css/index.css
@@ -16,10 +16,8 @@ div.header{
     background-color:#7fd3cf;
 }
 div.header>div.container{
-    width: 60rem;
-    position:relative;
-    margin-left:auto;
-    margin-right:auto;
+    display:flex;
+    justify-content: center;
 }
 div.header>div.container>div{
     font-size: 1rem ;
