--- a/templates/account/index.html
+++ b/templates/account/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>首页</title>
+    <link rel="stylesheet" href="/static/css/global.css">
     <link rel="stylesheet" href="/static/css/index.css">
     <script type="text/javascript" src="/static/js/jquery-3.4.1.min.js"></script>
     <script type="text/javascript" src="/static/js/index.js/"></script>
@@ -89,6 +90,11 @@
         </div>
     {% endif %}
 
+    <div style="height:5rem"></div>
+    <div class="go_to_read">
+        <a href="/books/">读书去</a>
+    </div>
+
     <div class="sweets">
         <form name="drawcards" id="drawcards" method="post" action="/drawcards/">
             <!--<button type="button" onclick="f1()">试试手气</button>-->
@@ -105,7 +111,7 @@
     <div class="bei_an">
         <p>
 <!--            <img src="https://csdnimg.cn/pubfooter/images/gongan.png" alt="备案图标">-->
-            <a href="http://beian.miit.gov.cn/publish/query/indexFirst.action">京ICP备19036293号-1</a>
+            <br><br><br><a href="http://beian.miit.gov.cn/publish/query/indexFirst.action">京ICP备19036293号-1</a>
         </p>
     </div>
 
