--- a/templates/account/logined.html
+++ b/templates/account/logined.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>登录结果</title>
+    <link rel="stylesheet" href="/static/css/global.css">
     {% if result == 'ok' %}<meta http-equiv="refresh" content="3;URL=/account/index/">{% endif %}
 </head>
 <body>
