--- a/templates/account/reset_done.html
+++ b/templates/account/reset_done.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>重置密码成功</title>
+    <link rel="stylesheet" href="/static/css/global.css">
     <meta http-equiv="refresh" content="3;URL=/account/index/">
 </head>
 <body>
