--- a/templates/account/resetpassword.html
+++ b/templates/account/resetpassword.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>重置密码申请</title>
+    <link rel="stylesheet" href="/static/css/global.css">
     <link rel="stylesheet" type="text/css" href="/static/css/login.css">
 </head>
 <body>
