--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>登录</title>
+    <link rel="stylesheet" href="/static/css/global.css">
     <link rel="stylesheet" type="text/css" href="/static/css/login.css">
 </head>
 <body>
