--- a/templates/account/regist.html
+++ b/templates/account/regist.html
@@ -5,6 +5,7 @@
     <title>注册</title>
     <script type="text/javascript" src="/static/js/regist.js/"></script>
     <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
+    <link rel="stylesheet" href="/static/css/global.css">
     <link rel="stylesheet" type="text/css" href="/static/css/regist.css">
 </head>
 <body>
