--- a/templates/account/registed.html
+++ b/templates/account/registed.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="/static/css/global.css">
     <title>注册结果</title>
     {% if result == 'ok' %}<meta http-equiv="refresh" content="3;URL=/account/index/">{% endif %}
 </head>
