--- a/templates/drawcards.html
+++ b/templates/drawcards.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>draw</title>
+    <link rel="stylesheet" href="/static/css/global.css">
     <style type="text/css">
         p{
             font-size: 14px;
