--- a/static/css/book.css
+++ b/static/css/book.css
@@ -34,6 +34,7 @@ div.content_footer>span{
     margin:0 3rem;
 }
 div.content_footer{
+    font-size: 1rem;
     display: flex;
     justify-content: center;
     align-items: center;
