--- a/templates/account/index.html
+++ b/templates/account/index.html
@@ -58,7 +58,7 @@
 
 
         {% else %}
-            <div style="display:inline-block;position:absolute;right:0;">
+            <div style="display:inline-block;position:absolute;right:0;width:auto;">
                 <span style="display:inline">未登陆</span> <a style="display:inline" href="/account/login/">登陆</a> <a style="display:inline" href="/account/regist/">注册</a>
             </div>
         {% endif %}
