--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -2,18 +2,70 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>登录</title>
-    <link rel="stylesheet" href="/static/css/global.css">
-    <link rel="stylesheet" type="text/css" href="/static/css/login.css">
+    <title>登录 -- 胡萝呗</title>
+    <link rel="stylesheet" href="/static/css/register.css">
+    <link rel="stylesheet" href="/static/css/default.css">
+
+    <script type="text/javascript" src="/static/js/vue.min.js"></script>
+    <script type="text/javascript" src="/static/js/jquery-3.4.1.js"></script>
+    <script type="text/javascript" src="/static/js/axios0.24.0.js"></script>
+    <script type="text/javascript" src="/static/js/pre_common.js"></script>
 </head>
 <body>
-    <form action ='/account/logined/' method="post">
-        <p>用户名: <input type="text" name="username" autocomplete="off" placeholder="不超过12位"
-                       autofocus="autofocus" required maxlength="12"></p>
-        <p>密码: <input type="password" name="password" required maxlength="12" placeholder="同样不超过12位"></p>
-        <input type="submit" value="登录"> <input type="reset">
-    </form>
-    <a href="/account/regist/"><p class='regist'>点我注册</p></a>
-    <a href="/account/resetpassword/"><p class='regist'>忘记了密码</p></a>
+    <div class="header clearfix">
+        <div class="container">
+            <div class="where_am_i">
+                <a href="/">首页</a> >> <a href={{ url('account:login') }}>登录</a>
+            </div>
+            <div class="search_bar" id="search_bar" v-cloak>
+                <form action="/search" method="get">
+                    <input type="text" class="search_input" :placeholder="search_place_holder" name="q" autocomplete="off">
+                    <input type="submit" value="提交">
+                </form>
+            </div>
+            <div class="user_info" id="user_info_bar" v-cloak>
+                <div v-if="username">
+                    <a class="username" href={{ url('account:profile') }}>[[ username ]]</a>
+                    <a id="logout" href={{ url('account:logout') }}>退出</a>
+                </div>
+                <div v-else>
+                    <a id="register" href={{ url('account:register') }}>注册</a>
+                    <a id="login" href={{ url('account:login') }}>登录</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="header_bottom">
+        <div id="app">
+        <form method="post" class="register_form" @submit="on_submit" v-cloak>
+            {{ csrf_input }}
+            <input type="hidden" id="uuid" name="uuid">
+            <ul>
+                <li>
+{#                    <label for="user_name" >用户名</label>#}
+                    <input type="text" name="username" id="user_name" autocomplete="off" placeholder="用户名">
+                </li>
+                <li>
+{#                    <label for="pwd">密码</label>#}
+                    <input type="password" name="password" id="pwd" autocomplete="off" placeholder="密码" @blur="check_password">
+                    <span class="error_tip" v-show="error_password">请输入8-20位的密码</span>
+                </li>
+                <li>
+{#                    <label for="pic_code">图形验证码</label>#}
+                    <input type="text" name="img_code" id="pic_code" class="msg_input" placeholder="图形验证码" v-model="img_code" @blur="check_img_code">
+                    <img :src="image_code_url" alt="图形验证码" class="pic_code" @click="generate_image_code" >
+                    <span class="error_tip" v-show="error_img_code">[[ error_img_message ]]</span>
+                </li>
+                <li>
+                    <input type="submit" value="登录" class="blue_white_button">
+                    <span class="blue_white_button">忘记密码</span>
+                </li>
+            </ul>
+        </form>
+    </div>
+    </div>
+    <script src="/static/js/forked.js"></script>
+    <script src="/static/js/login.js"></script>
+    <script src="/static/js/common.js"></script>
 </body>
 </html>
