--- a/templates/crawlers/content.html
+++ b/templates/crawlers/content.html
@@ -3,71 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <title>{{chapter}}</title>
-    <link rel="stylesheet" href="/static/css/global.css">
-    <link rel="stylesheet" href="/static/css/index.css">
+    <link rel="stylesheet" href="/static/css/default.css">
+{#    <link rel="stylesheet" href="/static/css/index.css">#}
     <link rel="stylesheet" href="/static/css/book.css">
     <script type="text/javascript" src="/static/js/jquery-3.4.1.min.js"></script>
+    <script type="text/javascript" src="/static/js/vue.min.js"></script>
+    <script type="text/javascript" src="/static/js/axios0.24.0.js"></script>
     <script type="text/javascript" src="/static/js/index.js/"></script>
     <script type="text/javascript" src="/static/js/user_collections.js/"></script>
+    <script type="text/javascript" src="/static/js/pre_common.js/"></script>
 </head>
 <body>
     <div class="header clearfix">
         <div class="container">
-            <div id="navigation0">一些个人代码<b>外链</b>
-                <div class="works">
-                    <a target="_blank" href="https://github.com/ietar"><b>github</b></a>
-                    <a target="_blank" href="https://fishc.com.cn/thread-143822-1-1.html">减少欧非的抽红包</a>
-                    <a target="_blank" href="https://fishc.com.cn/thread-143394-1-1.html">模拟明日方舟抽卡</a>
-                    <a target="_blank" href="https://fishc.com.cn/thread-141601-1-1.html">发送文本邮件</a>
-                    <a target="_blank" href="https://fishc.com.cn/thread-141064-1-1.html">复习一下妹子图</a>
-                    <a target="_blank" href="https://fishc.com.cn/thread-134327-1-1.html">最大质因数算法优化</a>
-                    <a target="_blank" href="https://fishc.com.cn/thread-134199-1-1.html">豆瓣电影top250爬虫</a>
-                    <a target="_blank" href="https://fishc.com.cn/thread-133755-1-1.html">打飞机是男人的浪漫!</a>
+            <div class="where_am_i">
+                <a href="/">首页</a>
+                <span class="arrow">--></span>
+                <a href="{{ url('books') }}">书籍总览</a>
+                <span class="arrow">--></span>
+                <a href="/book/{{book_id}}/">《{{book_name}}》</a>
+                <span class="arrow">--></span><span>{{chapter}}</span>
+            </div>
+            <div class="search_bar" id="search_bar" v-cloak>
+                <form action="/search/" method="get">
+                    <input type="text" class="search_input" :placeholder="search_place_holder" name="q" autocomplete="off">
+                    <input type="submit" value="提交">
+                </form>
+            </div>
+            <div class="user_info" id="user_info_bar" v-cloak>
+                <div v-if="username">
+                    <a class="username" href={{ url('account:profile') }}>[[ username ]]</a>
+                    <a id="logout" href={{ url('account:logout') }}>退出</a>
+                </div>
+                <div v-else>
+                    <a id="register" href={{ url('account:register') }}>注册</a>
+                    <a id="login" href={{ url('account:login') }}>登录</a>
                 </div>
             </div>
-            <div id="navigation1">1
-                <div>
-                    <span>1</span><span>2</span><span>3</span><span>4</span>
-                </div>
-            </div>
-            <div id="navigation2">2
-                <div>
-                    <span>1</span><span>2</span><span>3</span><span>4</span>
-                </div>
-            </div>
-            <div id="navigation3">3
-                <div>
-                    <span>1</span><span>2</span><span>3</span><span>4</span>
-                </div>
-            </div>
-            <div id="navigation4">4
-                <div>
-                    <span>1</span><span>2</span><span>3</span><span>4</span>
-                </div>
-            </div>
-            <div id="navigation5">5
-                <div>
-                    <span>1</span><span>2</span><span>3</span><span>4</span>
-                </div>
-            </div>
-
-            {% if username %}
-                <div style="display:inline-flex;position:absolute;right:0;align-items:center;justify-content: center;width:auto;">
-                    <img style="display:inline" alt="头像" src="/media/{{user_img}}/" onclick="upload()" height=30px>
-                    <span style="display:inline;margin:0 0.5rem">{{username}}</span>
-                    <span style="display:inline"><a href="/account/logout/">退出</a></span>
-                </div>
-
-
-            {% else %}
-                <div style="display:inline-block;position:absolute;right:0;width:auto;">
-                    <span style="display:inline">未登陆</span> <a style="display:inline" href="/account/login/">登陆</a> <a style="display:inline" href="/account/regist/">注册</a>
-                </div>
-            {% endif %}
         </div>
     </div>
     <div class="blank"></div>
-    <div class="main">
+    <div class="book_main">
         <div class="where_am_i">
             <a href="/">首页</a>
             <span class="arrow">--></span>
@@ -92,11 +68,11 @@
             {% endif %}
 
             <div class="content_footer">
-                <a href="/book/{{book_id}}/{{chapter_count|add:-1}}">前一章</a>
+                <a href="/book/{{book_id}}/{{chapter_count - 1}}">前一章</a>
                 <a href="/book/{{book_id}}">回目录</a>
-                <a href="/book/{{book_id}}/{{chapter_count|add:1}}">后一章</a>
+                <a href="/book/{{book_id}}/{{chapter_count + 1}}">后一章</a>
                 <a href="javascript:void(0);" onclick=add_collections('{{username}}')>收藏 </a>
-                <!--                todo                -->
+                {# todo #}
             </div>
         </div>
         <div class="comment_wrapper">
@@ -109,7 +85,7 @@
                         <span class="comment_ts">评论时间: {{comment.ts}}</span>
 
                         <span class="agree_span">
-                        <!--todo-->
+                            {#todo#}
                             <a href="javascript:void(0)" class="agree" onclick="console.log('{{comment.id}}')">赞个</a>
                             <span class="comment_agree">{{comment.agree}}</span>
                             <a href="javascript:void(0)" class="disagree" onclick="console.log('{{comment.id}}')">反对</a>
@@ -119,12 +95,16 @@
                 {% endfor %}
             </div>
             <div class="add_comment">
-                <label>
+                <div>
+                    <label>
                     <textarea id="input_comment" cols="30" rows="4"></textarea>
                 </label>
-                <span>署名:</span>
-                <input type="text" id="input_comment_user_name" placeholder="{{username}}">
-                <a href="javascript:void(0)" class="add_comment" onclick="add_comment('{{book_id}}', '{{chapter_count}}');">提交</a>
+                </div>
+                <div>
+                    <span>署名:</span>
+                    <input type="text" id="input_comment_user_name" placeholder="{{username}}">
+                    <a href="javascript:void(0)" class="add_comment" onclick="add_comment('{{book_id}}', '{{chapter_count}}');">提交</a>
+                </div>
             </div>
         </div>
     </div>
@@ -148,6 +128,6 @@
         </p>
     </div>
 
-<script type="text/javascript" src="/static/js/upload.js/"></script>
+    <script type="text/javascript" src="/static/js/common.js/"></script>
 </body>
 </html>
